--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,109 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Justin and Jecery</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Stalemate">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Gabriela">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Manjari">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Stalemate">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gabriela">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Manjari">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
- 
+    <header class="header bg-dark bg-cover">
+        <nav class="navbar navbar-expand-lg pt-md-5 pb-md-5 ">
+            <div class="container">
+                <a class="navbar-brand d-flex align-content-around align-items-center px-4" href="index.html">
+                    <img class="logo-sm" src="images/logo.png" alt="Logo" height="50"
+                        class="align-text-top d-inline-block">
+                </a>
+                <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navBar">
+                    <i class="fa fa-navicon" style="color:#fff; font-size:28px;"></i>
+                </button>
+                <div class="col-4 justify-content-end  navbar-collapse collapse" id="navBar">
+                    <ul class="navbar-nav  mb-lg-0 text-md-end ps-4">
+                        <li class="nav-item text-nowrap ">
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold text-white" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item text-nowrap">
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white" href="registry.html">Gift
+                                Registry</a>
+                        </li>
+                        <li class="nav-item text-nowrap">
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white"
+                                href="gallery.html">Gallery</a>
+                        </li>
+                        <li class="nav-item text-nowrap">
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white disabled"
+                                href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+        </nav>
+        <!-- header bottom --->
+
+    </header>
+
+    <p class="space"></p>
+
+
+
+    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+        <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
+        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
+        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+        <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
+      </div>
+      <div class="tab-content" id="v-pills-tabContent">
+        <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">...</div>
+        <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">...</div>
+        <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">...</div>
+        <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">...</div>
+      </div>
+
+
+
+    <p class="space"></p>
+    
+    <div class="container-fluid bg-dark bg-footer ">
+
+        <div class="row d-flex flex h-100 justify-content-center align-content-center align-items-center">
+
+            <div class="col-3 col-md-4 col-lg-5 text-end">
+                <div class="row d-flex justify-content-end">
+                    <div class="col-12 col-md-4 col-lg-2">
+                        <a href="https://www.facebook.com/tsujiiin"><img class="img-fluid rounded-circle"
+                                src="images/dodong.jpg" alt="groom"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 text-center">
+                <img class="w-100" src="images/logo.png" alt="">
+                <p class="text-white npm">We're getting married!</p>
+                <p class="text-white npm">12 • 15 • 2022</p>
+            </div>
+            <div class="col-3 col-md-4 col-lg-5">
+                <div class="row">
+                    <div class="col-12 col-md-4 col-lg-2">
+                        <a href="https://www.facebook.com/bimbapp"><img class="img-fluid rounded-circle"
+                                src="images/dadai.jpg" alt="groom"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+    <script src="js/mainjs.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://player.vimeo.com/api/player.js"></script>
+
 </body>
 
 </html>
