--- a/gallery.html
+++ b/gallery.html
@@ -4,18 +4,226 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Justin and Jecery</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Stalemate">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Gabriela">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Manjari">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Stalemate">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gabriela">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Manjari">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
- 
+    <header class="header bg-dark bg-cover">
+        <nav class="navbar navbar-expand-lg pt-md-5 pb-md-5 ">
+            <div class="container">
+                <a class="navbar-brand d-flex align-content-around align-items-center px-4" href="index.html">
+                    <img class="logo-sm align-text-top d-inline-block" src="images/logo.png" alt="Logo" height="50">
+                </a>
+                <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navBar">
+                    <i class="fa fa-navicon" style="color:#fff; font-size:28px;"></i>
+                </button>
+                <div class="col-4 justify-content-end  navbar-collapse collapse" id="navBar">
+                    <ul class="navbar-nav  mb-lg-0 text-md-end ps-4">
+                        <li class="nav-item text-nowrap ">
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold text-white" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item text-nowrap">
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white" href="registry.html">Gift
+                                Registry</a>
+                        </li>
+                        <li class="nav-item text-nowrap">
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white disabled"
+                                href="gallery.html">Gallery</a>
+                        </li>
+                        <li class="nav-item text-nowrap">
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white "
+                                href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- header bottom --->
+
+    </header>
+
+
+    <!-- gallery -->
+    <div class="container-fluid py-6">
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-4">
+                <div class="row">
+                    <div class="col-12">
+                        <img class="img-fluid"
+                            src="https://images.pexels.com/photos/1702373/pexels-photo-1702373.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                            alt="">
+                        <div class="ms-4 mt-3 ps-3 gal-captionlines">
+                            <h2 class="">Lorem Ipsum</h2>
+                            <h6>It is a long established fact that a reader will be distracted by the readable content
+                                of a page when looking at its layout.</h6>
+                        </div>
+                    </div>
+                </div>
+                <br> <br>
+                <div class="row">
+                    <div class="col-12">
+                        <img class="img-fluid"
+                            src="https://images.pexels.com/photos/137596/pexels-photo-137596.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                            alt="">
+                        <div class="ms-4 mt-3 ps-3 gal-captionlines">
+                            <h2 class="">Lorem Ipsum</h2>
+                            <h6>It is a long established fact that a reader will be distracted by the readable content
+                                of a page when looking at its layout.</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-1"></div>
+
+            <div class="col-3">
+                <img class="mt-5 img-fluid"
+                    src="https://images.pexels.com/photos/2788488/pexels-photo-2788488.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="">
+                <div class="ms-4 mt-3 ps-3 gal-captionlines">
+                    <h2 class="">Lorem</h2>
+                    <h6>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</h6>
+                </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-6">
+                <img class="img-fluid"
+                    src="https://images.pexels.com/photos/219776/pexels-photo-219776.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="">
+                <div class="ms-4 mt-3 ps-3 gal-captionlines">
+                    <h2 class="">Lorem Ipsum</h2>
+                    <h6>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</h6>
+                </div>
+            </div>
+            <div class="col-1"></div>
+            <div class="col-1">
+                <img class="img-fluid"
+                    src="https://images.pexels.com/photos/2970287/pexels-photo-2970287.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="">
+            </div>
+            <div class="col-2"></div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-4">
+                <img class="img-fluid"
+                    src="https://images.pexels.com/photos/1128782/pexels-photo-1128782.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="">
+                <div class="ms-4 mt-3 ps-3 gal-captionlines">
+                    <h2 class="">Lorem Ipsum</h2>
+                    <h6>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</h6>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-12">
+                        <img class="img-fluid"
+                            src="https://images.pexels.com/photos/1702373/pexels-photo-1702373.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                            alt="">
+                        <div class="ms-4 mt-3 ps-3 gal-captionlines">
+                            <h2 class="">Lorem Ipsum</h2>
+                            <h6>It is a long established fact that a reader will be distracted by the readable content
+                                of a page when looking at its layout.</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-1"></div>
+            <div class="col-3">
+                <div class="row">
+                    <div class="col-12">
+                        <img class="img-fluid"
+                            src="https://images.pexels.com/photos/1024960/pexels-photo-1024960.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                            alt="">
+                        <div class="ms-4 mt-3 ps-3 gal-captionlines">
+                            <h2 class="">Lorem Ipsum</h2>
+                            <h6>It is a long established fact that a reader will be distracted by the readable content
+                                of a page when looking at its layout.</h6>
+                        </div>
+
+                    </div>
+                </div>
+                <br> <br>
+                <div class="row">
+                    <div class="col-12">
+                        <img class="img-fluid"
+                            src="https://images.pexels.com/photos/3014857/pexels-photo-3014857.jpeg?auto=compress&cs=tinysrgb&w=1600"
+                            alt="">
+                        <div class="ms-4 mt-3 ps-3 gal-captionlines">
+                            <h2 class="">Lorem Ipsum</h2>
+                            <h6>It is a long established fact that a reader will be distracted by the readable content
+                                of a page when looking at its layout.</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-2"></div>
+
+        </div>
+    </div>
+    <!-- gallery end -->
+
+
+
+
+
+
+
+
+
+    <p class="space"></p>
+
+    <div class="container-fluid bg-dark bg-footer ">
+
+        <div class="row d-flex flex h-100 justify-content-center align-content-center align-items-center">
+
+            <div class="col-3 col-md-4 col-lg-5 text-end">
+                <div class="row d-flex justify-content-end">
+                    <div class="col-12 col-md-4 col-lg-2">
+                        <a href="https://www.facebook.com/tsujiiin"><img class="img-fluid rounded-circle"
+                                src="images/dodong.jpg" alt="groom"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 text-center">
+                <img class="w-100" src="images/logo.png" alt="">
+                <p class="text-white npm">We're getting married!</p>
+                <p class="text-white npm">12 • 15 • 2022</p>
+            </div>
+            <div class="col-3 col-md-4 col-lg-5">
+                <div class="row">
+                    <div class="col-12 col-md-4 col-lg-2">
+                        <a href="https://www.facebook.com/bimbapp"><img class="img-fluid rounded-circle"
+                                src="images/dadai.jpg" alt="groom"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+    <script src="js/mainjs.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://player.vimeo.com/api/player.js"></script>
+
 </body>
 
 </html>
