--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Justin and Jecery</title>
-
+    <link rel="icon" href="icons/weddii-ico-rose.png" type="image/icon type">
+    <title>weddii</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,8 +20,8 @@
         <nav class="navbar navbar-expand-lg pt-md-5 pb-md-5 ">
             <div class="container">
                 <a class="navbar-brand d-flex align-content-around align-items-center px-4" href="index.html">
-                    <img class="logo-sm" src="images/logo.png" alt="Logo" height="50"
-                        class="align-text-top d-inline-block">
+                    <img class="logo-sm align-text-top d-inline-block" src="images/logo-white.png" alt="Logo"
+                        height="60">
                 </a>
                 <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navBar">
@@ -30,52 +30,194 @@
                 <div class="col-4 justify-content-end  navbar-collapse collapse" id="navBar">
                     <ul class="navbar-nav  mb-lg-0 text-md-end ps-4">
                         <li class="nav-item text-nowrap ">
-                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold text-white" href="index.html">Home</a>
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold text-rose" href="index.html">Home</a>
                         </li>
                         <li class="nav-item text-nowrap">
-                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white" href="registry.html">Gift
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-rose" href="registry.html">Gift
                                 Registry</a>
                         </li>
                         <li class="nav-item text-nowrap">
-                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white"
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-rose "
                                 href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item text-nowrap">
-                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white disabled"
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-rose text-muted disabled"
                                 href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
+            </div>
         </nav>
-        <!-- header bottom --->
-
     </header>
 
-    <p class="space"></p>
+
+
+    <div class="container-fluid vh-100">
+        <div class="position-relative">
+            <div id="Caro" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active p-5">
+                        <div class="container-fluid position-relative">
+                            <div id="contactJustin" class="container-fluid">
+                                    <div class="row py-5">
+                                        <div
+                                            class="col-lg-4">
+                                            <div class="container-fluid">
+                                                <section class="container-fluid position-relative">
+                                                    <img class="rounded-5 w-100" src="images/profile/justin2.png">
+                                                </section>
+                                            </div>
+                                        </div>
+                                        <div
+                                            class="col-lg-8 text-center text-lg-start bg-success bg-white p-3">
+                                            <section>
+                                                <div class="row">
+                                                    <div
+                                                        class="col-12 text-color-rose text-center text-lg-start ">
+                                                        <h1><i><b>Justin Masiga
+                                                                    <hr>
+                                                                </b></i></h1>
+
+                                                    </div>
+                                                </div>
+                                                <div class="text-center text-lg-start w-100">
+                                                    <h4><b>Full Stack Web Developer (Training)</b></h4>
+
+                                                    <h5>Dear friends, family, and guests!
+                                                    </h5>
+                                                    <h5>Hi there! for questions about the wedding you can
+                                                        contact me via facebook
+                                                        messenger or email!
+                                                    </h5>
+
+                                                    <h5>hank you for the people helping us out on our
+                                                        wedding agendas! I
+                                                        definitely appreciate the help and funding some of our budget.
+                                                    </h5>
+
+                                                    <h5>If you'd like me to build a website for your
+                                                        business, event or just your
+                                                        portfolio, feel free to contact me.</h5>
+
+                                                    <h5>We hope to see everyone soon!</h5>
+                                                </div>
+                                                <div class="row d-flex justify-content-end mt-1">
+                                                    <div class="col-lg-8 col-12 text-center text-lg-end text-nowrap">
+                                                        <h5><i class="fa fa-at"></i>&nbsp;&nbsp;justin.masiga.94@gmail.com
+                                                        </h5>
+                                                        <h5><i
+                                                                class="fa fa-facebook"></i>&nbsp;&nbsp;facebook.com/tsujiiin
+                                                        </h5>
+                                                        <h5><i class="fa fa-phone"></i>&nbsp;&nbsp;+63 (956)
+                                                            024 2058
+                                                        </h5>
+                                                    </div>
+                                                </div>
+                                            </section>
+                                        </div>
+                                    </div>
+                            </div>
+                        </div>
+                    </div> 
+                   
+                    <div class="carousel-item p-5">
+                        <div class="container-fluid position-relative">
+                            <div id="contactJecery" class="container-fluid">
+                                    <div class="row py-5">
+                                        <div
+                                            class="col-lg-4 d-flex ">
+                                            <div class="container-fluid">
+                                                <section class="container-fluid position-relative">
+                                                    <img class="rounded-5 w-100" src="images/profile/jecery2.png">
+                                                </section>
+                                            </div>
+                                        </div>
+                                        <div
+                                            class="col-lg-8 text-center text-lg-start bg-success bg-white p-3">
+                                            <section>
+                                                <div class="row">
+                                                    <div
+                                                        class="col-12 text-color-rose text-center text-lg-start ">
+                                                        <h1><i><b>Jecery Bim Mepico<hr></b></i></h1>
+
+                                                    </div>
+                                                </div>
+                                                <div class="text-center text-lg-start ">
+                                                    <h4><b>High School Teacher</b></h4>
+
+                                                    <h5>Dear friends, family, and guests!
+                                                    </h5>
+                                                    <h5>We're so excited to share the big news with
+                                                        you: Justin and I are getting married! We've been
+                                                        together for
+                                                        almost 13 years, and we couldn't be more thrilled.
+                                                    </h5>
+
+                                                    <h5>This is a huge milestone in our relationship, and we
+                                                        can't wait
+                                                        to start the next chapter of our lives together. We
+                                                        know this is
+                                                        going to be an incredible adventure—we've never been
+                                                        so happy!
+                                                    </h5>
+
+                                                    <h5>We want you to know that if anything comes up during
+                                                        your visit
+                                                        (or if you just want to send us a gift, please don't
+                                                        hesitate to
+                                                        reach out. We're both incredibly grateful for all of
+                                                        your
+                                                        support over the years, and we'll always be grateful
+                                                        for your
+                                                        friendship.</h5>
+
+                                                    <h5>We hope to see everyone soon!</h5>
+                                                </div>
+                                                <div class="row d-flex justify-content-end mt-1">
+                                                    <div class="col-lg-8 col-12 text-center text-lg-end text-nowrap">
+                                                        <h5><i class="fa fa-at"></i>&nbsp;&nbsp;jecerybim@gmail.com
+                                                        </h5>
+                                                        <h5><i
+                                                                class="fa fa-facebook"></i>&nbsp;&nbsp;facebook.com/bimbapp
+                                                        </h5>
+                                                        <h5><i class="fa fa-phone"></i>&nbsp;&nbsp;+63 (906)
+                                                            475 2647
+                                                        </h5>
+                                                    </div>
+                                                </div>
+                                            </section>
+                                        </div>
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev carousel-btn" type="button" data-bs-target="#Caro"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next carousel-btn" type="button" data-bs-target="#Caro"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
 
 
-    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-        <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
-        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
-        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
-        <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
-      </div>
-      <div class="tab-content" id="v-pills-tabContent">
-        <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">...</div>
-        <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">...</div>
-        <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">...</div>
-        <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">...</div>
-      </div>
 
 
 
-    <p class="space"></p>
-    
+
+
+
+
     <div class="container-fluid bg-dark bg-footer ">
-
         <div class="row d-flex flex h-100 justify-content-center align-content-center align-items-center">
-
             <div class="col-3 col-md-4 col-lg-5 text-end">
                 <div class="row d-flex justify-content-end">
                     <div class="col-12 col-md-4 col-lg-2">
@@ -85,7 +227,7 @@
                 </div>
             </div>
             <div class="col-6 col-md-4 col-lg-2 text-center">
-                <img class="w-100" src="images/logo.png" alt="">
+                <img class="w-100" src="images/logo-rose.png" alt="">
                 <p class="text-white npm">We're getting married!</p>
                 <p class="text-white npm">12 • 15 • 2022</p>
             </div>
@@ -99,6 +241,10 @@
             </div>
         </div>
     </div>
+
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
