follow up edit on broken image

--- a/registry.html
+++ b/registry.html
@@ -152,12 +152,12 @@
                     <h5>Plates & Bowls</h5>
                 </div>
                 <div class="col-6 col-md-3 col-lg-2">
-                    <img id="Glass Set" class="rounded-circle img-fluid " src="images/Glass.png" data-bs-toggle="modal"
+                    <img id="Glass Set" class="rounded-circle img-fluid " src="images/glass.png" data-bs-toggle="modal"
                         data-bs-target="#pledgeModal" onclick="chngeModTitle(id);">
                     <h5>Glass Sets</h5>
                 </div>
                 <div class="col-6 col-md-3 col-lg-2">
-                    <img id="Cups & Mugs" class="rounded-circle img-fluid " src="images/Cups.png" data-bs-toggle="modal"
+                    <img id="Cups & Mugs" class="rounded-circle img-fluid " src="images/cups.png" data-bs-toggle="modal"
                         data-bs-target="#pledgeModal" onclick="chngeModTitle(id);">
                     <h5>Cups & Mugs</h5>
                 </div>
@@ -172,7 +172,7 @@
         <section id="living_row">
             <div class="row d-flex justify-content-around text-center mt-5 ">
                 <div class="col-6 col-md-3 col-lg-2">
-                    <img id="Frames" class="rounded-circle img-fluid" src="images/Frames.png" data-bs-toggle="modal"
+                    <img id="Frames" class="rounded-circle img-fluid" src="images/frames.png" data-bs-toggle="modal"
                         data-bs-target="#pledgeModal" onclick="chngeModTitle(id);">
                     <h5>Frames</h5>
                 </div>
