--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="col-8 col-md-6 col-lg-7 p-md-1 rose1-50 text-white my-lg-5 ">
                         <div class="text-center text-lg-start m-md-5 gal-captionlines ps-lg-5 ps-2">
                             <p class="f-loc-title f-Gabriela">Church</p>
-                            <p class="f-loc-text">Our Lady of the Assumption Quasi-Parish</p>
+                            <h5 class="">Our Lady of the Assumption Quasi-Parish</h5>
                             <p class="f-loc-time">10:00 AM to 12:00 PM</p>
                             <button class="btn bg-white p-2" id="churchLoc" onclick="locationSwitch(id);"
                                 data-bs-toggle="modal" data-bs-target="#locationModal">Church
@@ -88,7 +88,7 @@
                     <div class="col-8 col-md-7 p-md-1 rose1-50 text-white my-lg-5">
                         <div class="text-center text-lg-start m-md-5 gal-captionlines  ps-2 ps-lg-5">
                             <p class="f-loc-title f-Gabriela">Party Venue</p>
-                            <p class="f-loc-text">D' Veranda - an events place</p>
+                            <h5 class="f-loc-text">D' Veranda - an events place</h5>
                             <p class="f-loc-time">12:00 PM to 2:00 PM</p>
                             <button class="btn bg-white p-2" data-bs-toggle="modal" data-bs-target="#locationModal"
                                 id="verandaLoc" onclick="locationSwitch(id);">Venue Location</button>
