--- a/registry.html
+++ b/registry.html
@@ -28,7 +28,7 @@
                     <i class="fa fa-navicon" style="color:#fff; font-size:28px;"></i>
                 </button>
                 <div class="col-4 justify-content-end  navbar-collapse collapse" id="navBar">
-                    <ul class="navbar-nav  mb-lg-0 text-md-end ps-4">
+                    <ul class="navbar-nav  mb-lg-0 text-center ps-4">
                         <li class="nav-item text-nowrap ">
                             <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold text-rose" href="index.html">Home</a>
                         </li>
