--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg pt-md-5 pb-md-5 ">
             <div class="container">
                 <a class="navbar-brand d-flex align-content-around align-items-center px-4" href="index.html">
-                    <img class="logo-sm align-text-top d-inline-block" src="images/logo-white.png" alt="Logo"
+                    <img class="logo-sm align-text-top d-inline-block" src="images/logo-rose.png" alt="Logo"
                         height="60">
                 </a>
                 <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse"
