--- a/gallery.html
+++ b/gallery.html
@@ -49,8 +49,8 @@
             </div>
         </nav>
     </header>
-    <div class="container-fluid py-6 npm text-md-start text-center">
-        <div class="row">
+    <div class="container-fluid py-6 text-md-start text-center">
+        <div class="row w-100">
             <div class="col-md-1"></div>
             <div class="col-12 col-md-5">
                 <div class="row">
