typo fix registry

--- a/registry.html
+++ b/registry.html
@@ -259,7 +259,7 @@
         style="background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('images/gallery/paoay.jpg');">
         <div class="row d-flex flex-column text-center align-items-center py-5 mt-5">
             <div class="col-8">
-                <h1>Your presence at our wedding is alread a great gift to us.</h1>
+                <h1>Your presence at our wedding is already a great gift to us.</h1>
                 <h3>However, if you prefer giving us a Cash Gift,</h3>
                 <h3>we will definitely appreciate it and will use it for our future endeavors.</h3>
                 <h5 class="mt-5">If you wish to send it in advance, we’ve set up a few options
