typo fixes, contact and home

--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
                                                         contact me via facebook
                                                         messenger or email!
                                                     </h5>
-                                                    <h5>hank you for the people helping us out on our
+                                                    <h5>Thank you for the people helping us out on our
                                                         wedding agendas! I
                                                         definitely appreciate the help and funding some of our budget.
                                                     </h5>
