--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="col-12 col-lg-6 d-flex align-items-center justify-content-end">
                 <div class="col-12 text-lg-end text-center">
                     <h1 class="f-Gabriela">A Story of Us</h1>
-                    <p>From 2010 to 2022 and for years more to come.</p>
+                    <p>From 2010 to 2022 and for the years to come.</p>
                     <p>Thank you to the people who have been with us from the start!</p>
                 </div>
             </div>
