removed registry-messages (will update with php)

--- a/contact.html
+++ b/contact.html
@@ -78,9 +78,9 @@
                                                 </div>
                                                 <div class="text-center text-lg-start w-100">
                                                     <h4><b>Full Stack Web Developer (Training)</b></h4>
-                                                    <h5>Dear friends, family, and guests!
+                                                    <h5>Hi there! Justin here!
                                                     </h5>
-                                                    <h5>Hi there! for questions about the wedding you can
+                                                    <h5>For questions about the wedding you can
                                                         contact me via facebook
                                                         messenger or email!
                                                     </h5>
