--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <header class="header vh-100 bg-cover" style="background-image: url(images/gallery/3.jpg);">
         <nav class="navbar bg-dark navbar-expand-lg pt-md-5 pb-md-5 bg-opacity-75">
             <div class="container">
-                
                 <a class="navbar-brand d-flex align-content-around align-items-center px-4" href="index.html">
                     <img class="logo-sm align-text-top d-inline-block" src="images/logo-white.png" alt="Logo"
                         height="60">
@@ -135,7 +134,7 @@
         </div>
     </div>
     <div class="space"></div>
-    <div class="container-fluid py-5 my-5">
+    <!-- <div class="container-fluid py-5 my-5">
         <h1 class="text-center position-relative w-auto f-Gabriela text-color-rose">Messages from friends and family
         </h1>
         <div class="position-relative">
@@ -200,7 +199,7 @@
                 </button>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="container d-flex justify-content-center align-content-center mb-5">
         <div class="row d-flex justify-content-center">
             <div class="col-8">
