--- a/registry.html
+++ b/registry.html
@@ -51,7 +51,7 @@
         </nav>
     </header>
     <div class="space"></div>
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
         <div clas="container">
             <div class="row d-flex justify-content-center">
                 <div class="col-12 col-md-10 col-lg-8 text-center">
@@ -249,14 +249,13 @@
                                 <button class="form-control btn btn-danger w-50" data-bs-dismiss="modal">Pledge</button>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="container-fluid parallax my-2 my-lg-5 py-2 py-lg-2"
-        style="background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('images/gallery/paoay.jpg');">
+        style="background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.8)), url('images/gallery/paoay.jpg');">
         <div class="row d-flex flex-column text-center align-items-center py-5 mt-5">
             <div class="col-8">
                 <h1>Your presence at our wedding is already a great gift to us.</h1>
