--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gabriela">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Manjari">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
-
     <link rel="stylesheet" href="css/style.css">
+
+
+    <meta property='og:title' content='JustinandJecery'/>
+    <meta property='og:image' content='images/thumb.jpg'/>
+    <meta property='og:description' content='Wedding at December 15, 2022'/>
+    <meta property='og:url' content='justinandjecery.vercel.app'/>
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
+
+
+
 </head>
 
 <body>
