--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property='og:url' content='justinandjecery.vercel.app' />
     <meta property='og:image:width' content='1200' />
     <meta property='og:image:height' content='627' />
-
+    <meta property="og:type" content='website'/>
 
 
 </head>
@@ -78,7 +78,7 @@
     </header>
     <div class="cotainer-fluid bg-cover py-5" style="background-image: url(images/bg-story.png);">
         <div class="container-fluid text-center py-5">
-            <h1 class="text-center fs-title text-color-rose mt-3 f-Sacramento ">You are invited</h1>
+            <h1 class="text-center fs-invited text-color-rose mt-3 f-Sacramento ">You are invited</h1>
             <p class="text-center npm fs-4">December 15th, 2022</p>
             <p class="text-center npm fs-4">Our Lady of the Assumption Quasi-Parish</p>
             <p class="text-center npm fs-4">Tagum City, Davao del Norte</p>
@@ -114,7 +114,7 @@
     </div>
 
 
-    <div class="container-fluid parallax bg-info"
+    <div class="container-fluid parallax bg-info parallax-side"
         style="background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('images/lax.jpg');">
         <div class="blur py-5 text-white">
             <div class="space"></div>
@@ -179,18 +179,18 @@
 
     <div class="container-fluid py-5 text-center bg-cover"
         style="background-image: url(images/bg-footer-100.png);">
-        <h1 class="f-Sacramento fs-title">A Story of Us</h1>
-        <p>From 2010 to 2022 and for the years to come.</p>
+        <h1 class="f-Sacramento fs-invited">A Story of Us</h1>
+        <p class="fs-3">Watch our small video to get a glimpse of our travels through our years!</p>
         <div class="row d-flex justify-content-center">
             <div class="col-12 col-lg-8">
                 <div class="vid_container text-center pt-5">
-                    <iframe class="video" src="https://streamable.com/e/qov1mt?nocontrols=1&loop=0&">
+                    <iframe class="video" src="https://streamable.com/e/qov1mt?nocontrols=1&loop=0&" >
                     </iframe>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid text-white d-flex justify-content-center align-content-center parallax py-5 mt-5"
+    <div class="container-fluid text-white d-flex justify-content-center align-content-center parallax py-5"
         style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(images/veranda.jpg);">
         <div class="blur row d-flex justify-content-center">
             <div class="col-12 py-5 ">
