--- a/gallery.html
+++ b/gallery.html
@@ -79,7 +79,7 @@
                 <img class="mt-5 img-fluid" src="images/gallery/2.jpg" alt="">
                 <div class=" mt-3 ">
                     <h2 class="ps-3 gal-captionlines">Baywalk, Manila</h2>
-                    <h6 class="ps-3">With co-teacher of Jecery!</h6>
+                    <h6 class="ps-3">With co-teachers of Jecery!</h6>
                 </div>
             </div>
         </div>
