--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
     <meta property='og:image:width' content='1200' />
     <meta property='og:image:height' content='627' />
     <meta property="og:type" content='website'/>
-
-
 </head>
 
 <body>
@@ -62,9 +60,9 @@
                 </div>
             </div>
         </nav>
-        <div class="container-fluid h-75  position-relative">
-            <div class="row align-content-center mt-5 mt-md-0 position-absolute bottom-0 w-100">
-                <div class="col-6 bg-dark bg-opacity-50 p-5 ">
+        <div class="container-fluid h-100  position-relative">
+            <div class="row  mt-5 mt-md-0 position-absolute bottom-headtext w-100 head-tex">
+                <div class="col-12 col-md-5 bg-dark bg-opacity-50 p-5 ">
                     <div class="text-center text-white">
                         <h1 class="fw-bold">Justin & Jecery</h1>
                         <div class="col-4 ">
