--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="icons/weddii-ico-rose.png" type="image/icon type">
-    <title>Justin and Jecery</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Stalemate">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gabriela">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Manjari">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Justin and Jecery</title>
+        <link rel="icon" href="icons/us.jpg" type="image/icon type">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Stalemate">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gabriela">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Manjari">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
+        <link rel="stylesheet" href="css/style.css">
+    
+    
+        <meta property='og:title' content='JustinandJecery' />
+        <meta property='og:image' content='images/thumb.jpg' />
+        <meta property='og:description' content='Wedding at December 15, 2022' />
+        <meta property='og:url' content='justinandjecery.vercel.app' />
+        <meta property='og:image:width' content='1200' />
+        <meta property='og:image:height' content='627' />
+        <meta property="og:type" content='website'/>
+    </head>
 
 <body>
     <header class="header bg-dark bg-cover">
