--- a/gallery.html
+++ b/gallery.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Justin and Jecery</title>
-    <link rel="icon" href="icons/weddii-ico-rose.png" type="image/icon type">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Stalemate">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gabriela">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Manjari">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Justin and Jecery</title>
+        <link rel="icon" href="icons/us.jpg" type="image/icon type">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Stalemate">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gabriela">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Manjari">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
+        <link rel="stylesheet" href="css/style.css">
+    
+    
+        <meta property='og:title' content='JustinandJecery' />
+        <meta property='og:image' content='images/thumb.jpg' />
+        <meta property='og:description' content='Wedding at December 15, 2022' />
+        <meta property='og:url' content='justinandjecery.vercel.app' />
+        <meta property='og:image:width' content='1200' />
+        <meta property='og:image:height' content='627' />
+        <meta property="og:type" content='website'/>
+    </head>
 
 <body>
     <header class="header bg-dark bg-cover">
@@ -49,7 +59,7 @@
             </div>
         </nav>
     </header>
-    <div class="container-fluid py-6 text-md-start text-center">
+    <div class="container-fluid py-6 text-md-start text-center d-flex flex-column justify-content-center align-content-center align-items-center">
         <div class="row w-100">
             <div class="col-md-1"></div>
             <div class="col-12 col-md-5">
@@ -80,6 +90,7 @@
                 <div class=" mt-3 ">
                     <h2 class="ps-3 gal-captionlines">Baywalk, Manila</h2>
                     <h6 class="ps-3">With co-teachers of Jecery!</h6>
+                    <br>
                 </div>
             </div>
         </div>
@@ -91,6 +102,8 @@
                 <div class=" mt-3 ">
                     <h2 class="ps-3 gal-captionlines">Vigan, Ilocos Sur</h2>
                     <h6 class="ps-3">It's already Vigan.</h6>
+                    <br>
+
                 </div>
             </div>
             <div class="col-md-4">
