responsiveness, paddings, contact

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(images/veranda.jpg);">
         <div class="blur row d-flex justify-content-center">
             <div class="col-12 py-5 ">
-                <p class="f-Sacramento fs-title text-center">Event Timeline</p>
+                <p class="f-Sacramento fs-timeline text-center">Event Timeline</p>
                 <hr>
                 <div class="row timeline-text d-flex justify-content-center  text-start">
                     <div class="col-6">
@@ -226,7 +226,7 @@
             </div>
         </div>
         <div class="row f-flex justify-content-center">
-            <div class="col-6">
+            <div class="col-10 col-md-8 col-lg-6">
                 <img class="img-fluid mb-5" src="images/motif.png" alt="">
 
             </div>
