updated nav links

--- a/registry.html
+++ b/registry.html
@@ -40,7 +40,7 @@
                 <div class="col-4 justify-content-end  navbar-collapse collapse" id="navBar">
                     <ul class="navbar-nav  mb-lg-0 text-center ps-4">
                         <li class="nav-item text-nowrap ">
-                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold text-rose" href="index.html">Home</a>
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold text-rose" href="https://justinandjecery.vercel.app">Home</a>
                         </li>
                         <li class="nav-item text-nowrap">
                             <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold text-rose text-muted disabled"
