--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col-4 justify-content-end  navbar-collapse collapse" id="navBar">
                     <ul class="navbar-nav  mb-lg-0 text-center ps-4">
                         <li class="nav-item text-nowrap ">
-                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold text-white " href="index.html">Home</a>
+                            <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold text-white text-muted disabled" href="https://justinandjecery.vercel.app">Home</a>
                         </li>
                         <li class="nav-item text-nowrap">
                             <a class="px-lg-5 py-2 py-lg-0 pe-1 nav-link fw-bold  text-white" href="registry.html">Gift
